Update with lombok, fix pom file with latest versions